--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,26 @@ apply plugin: 'java'
 sourceCompatibility = 1.8
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
+    compile group: 'com.intellij', name: 'forms_rt', version: '7.0.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+jar {
+    archiveName = 'calc.jar'
+    manifest {
+        attributes(
+                'Main-Class': 'com.diyiliu.Main'
+        )
+    }
+}
+
+
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
